# m_htslib

./: Cargo.toml
src/: base.rs  bgzf.rs  cram.rs  error.rs  faidx.rs  gen_utils.rs  hts.rs  int_utils.rs  khash.rs  kstring.rs  le_bytes.rs  lib.rs  region.rs  sam.rs  to_le_bytes.rs
src/bgzf/: bgzf.rs  bgzf_error.rs  bgzf_impl.rs
src/cram/: cram.rs  cram_error.rs  cram_impl.rs
src/faidx/: faidx_error.rs  faidx_impl.rs
src/hts/: hfile.rs  hts_error.rs  hts_format.rs  hts_idx.rs  hts_itr.rs  hts_ocstr.rs  hts_opt.rs  hts_region.rs  hts_thread_pool.rs  htsfile.rs  traits.rs
src/khash/: khash.rs  khash_error.rs  khash_func.rs  khash_impl.rs  khash_map.rs  khash_set.rs
src/kstring/: kstring.rs  kstring_error.rs  kstring_impl.rs
src/region/: reg.rs  region_list.rs  traits.rs
src/sam/: bam_aux_iter.rs  bam_data.rs  base_mods.rs  cigar.rs  cigar_buf.rs  cigar_error.rs  cigar_validate.rs  record.rs  sam_error.rs  sam_hdr.rs  seq_iter.rs
src/sam/bam_data/: bam_data_impl.rs  bd_state_impl.rs  sections.rs  validate.rs  writer.rs
src/sam/base_mods/: base_mods_error.rs  bases.rs  delta.rs  mm_parse.rs  mod_iter.rs  mod_unit.rs  modification.rs
src/sam/record/: bam1.rs  sam_reader.rs  sam_writer.rs
src/sam/record/bam1/: aux.rs  aux_error.rs  aux_iter.rs  bam_data.rs  bam_data_api.rs  bam_type_code.rs  c_impl.rs  parse.rs  realign.rs  record_impl.rs  rust_impl.rs  seq_iter.rs
test/: list.txt  long_read_meth.bam  long_read_meth1.bam  realn01.sam  test_input_1_a.cram.crai  xx.fa  xx.fa.fai
