[package]
name = "m_htslib"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
libc = "~0.2"
c2rust-bitfields = "~0.20"
thiserror = "~2.0"
regex = "~1"
smallvec = { version = "~1", features = ["union", "const_generics"]}